// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`USERS API Add shortcut (study + application) (admin) 1`] = `
Object {
  "data": Object {
    "addShortCut": Object {
      "id": "ffdsfioir4jiofpjsidnvkxzjcklas;",
      "shortcuts": Array [
        Object {
          "application": "youtube",
          "id": "0cd0a970-2966-4699-990b-4d732976f8c0",
          "study": "study001",
        },
      ],
      "username": "admin",
    },
  },
}
`;

exports[`USERS API Add shortcut (study + application) (user) 1`] = `
Object {
  "data": Object {
    "addShortCut": Object {
      "id": "11234234231dsfajkdsjhflkdsla",
      "shortcuts": Array [
        Object {
          "application": null,
          "id": "a0679b38-008d-4a1f-8fd3-373f75a8a85d",
          "study": "study001",
        },
        Object {
          "application": null,
          "id": "39d7c656-a3b0-44bf-9061-1055298169af",
          "study": "study001",
        },
      ],
      "username": "chon",
    },
  },
}
`;

exports[`USERS API Add shortcut (study) (admin) 1`] = `
Object {
  "data": Object {
    "addShortCut": Object {
      "id": "ffdsfioir4jiofpjsidnvkxzjcklas;",
      "shortcuts": Array [
        Object {
          "application": "youtube",
          "id": "0cd0a970-2966-4699-990b-4d732976f8c0",
          "study": "study001",
        },
        Object {
          "application": "youtube",
          "id": "b5d7f215-e1a8-4d90-a8b1-dcf0adc57780",
          "study": "study001",
        },
      ],
      "username": "admin",
    },
  },
}
`;

exports[`USERS API Add shortcut (study) (user) 1`] = `
Object {
  "data": Object {
    "addShortCut": Object {
      "id": "11234234231dsfajkdsjhflkdsla",
      "shortcuts": Array [
        Object {
          "application": null,
          "id": "a0679b38-008d-4a1f-8fd3-373f75a8a85d",
          "study": "study001",
        },
      ],
      "username": "chon",
    },
  },
}
`;

exports[`USERS API Who am I (admin) 1`] = `
Object {
  "data": Object {
    "whoAmI": Object {
      "createdBy": "chon",
      "email": "souc@ic.ac.uk",
      "emailNotificationsActivated": false,
      "id": "ffdsfioir4jiofpjsidnvkxzjcklas;",
      "realName": "admin",
      "shortcuts": Array [],
      "type": "ADMIN",
      "username": "admin",
    },
  },
}
`;

exports[`USERS API Who am I (user) 1`] = `
Object {
  "data": Object {
    "whoAmI": Object {
      "createdBy": "admin",
      "email": "souchon@icloud.com",
      "emailNotificationsActivated": false,
      "id": "11234234231dsfajkdsjhflkdsla",
      "realName": "Chon Sou",
      "shortcuts": Array [],
      "type": "STANDARD",
      "username": "chon",
    },
  },
}
`;
